<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Breathing Exercises Metronome</string>
    <string name="hello_world">Hello world!</string>
    <string name="preferences_header">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="init_counter">0</string>
    <string name="init_clock">00:00</string>
    <string name="tap_to_start">Tap inside the circles to start</string>
    <string name="tap_to_pause">Tap inside the circles to pause</string>
    <string name="exercise_in_touch">Exercises in touch</string>
    <string name="touches">Touches</string>
    <string name="sound_on">Sound on</string>
    <string name="internal_exercises_pause">Rythm</string>
    <string name="pause_between_exercises">Pause between exercises</string>
    <string name="pause_between_touches">Pause between touches</string>
    <string name="header_pre_defined">Predefined level:</string>
    <string name="timeinexercise">Exercise period</string>
    <string name="timeinexercisesumm">Period of one exercise</string>
    <string name="exit">Exit</string>
    <string name="exercise_repeats">8</string>
    <string name="exercise_touch">4</string>
    <string name="exercise_single">4</string>
    <string name="exercise_double">4</string>
    <string name="time_in_exercise">10</string>
    <string name="time_in_small_pause">50</string>

    <string-array name="levels">
        <item>light</item>
        <item>medium</item>
        <item>normal</item>
    </string-array>
</resources>
